# nnstreamer-swift-yolo

./: meson.build  readme.md
packaging/: tensor-filter-swift_yolo.spec
src/: tensor_filter_swift_yolo.cc
